[package]
name = "imgo-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix-multipart = "0.6"
image = "0.25"
futures-util = "0.3"
actix-cors = "0.7.1"
imageproc = "0.25"
ab_glyph = "0.2"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
